--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.out
 out.txt
+nohup.out
 # Folders
 /GT
 /doc
@@ -7,9 +8,7 @@ out.txt
 /*/*/bugs/*
 bugs/*
 */*/Sab/*
-
 *.DS_Store
-
 # Formats
 *.zip
 *.7z
@@ -19,46 +18,35 @@ bugs/*
 *.xlsx
 *.xls
 *.odc
-
 # History files
 .Rhistory
 .Rapp.history
-
 # Session Data files
 .RData
 *.Rdata
 *.RData
 *.Rout
-
 /*/*/CODAindex.txt
 /*/*/CODAchain1.txt
 *chain1.txt
 *chain2.txt
-
 # Example code in package build process
 *-Ex.R
-
 # Output files from R CMD build
 /*.tar.gz
-
 # Output files from R CMD check
 /*.Rcheck/
-
 # RStudio files
 .Rproj.user/
 *.Rproj
-
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
-
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
-
 # knitr and R markdown default cache directories
 /*_cache/
 /cache/
-
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
